--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "aws-sdk": "^2.491.0",
     "axios": "^0.19.0",
     "echarts": "^4.2.1",
     "element-ui": "2.7.2",
