--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "path-to-regexp": "2.4.0",
     "querystring": "^0.2.0",
     "vue": "2.6.10",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
